Fixed bugs on mobile version

--- a/style.css
+++ b/style.css
@@ -221,8 +221,9 @@ h5{
 /* Adjustments for smaller screens */
 @media (max-width: 767px) {
     .hero {
-      height: auto;
+      height: 500px;
       padding: 50px 0;
+      
     }
   
     nav {
@@ -234,7 +235,8 @@ h5{
     }
   
     .content {
-      top: 40%;
+      top: 38%;
+    
     }
   
     h1 {
@@ -263,9 +265,19 @@ h5{
     }
   
     .about-text h5 {
+      text-align: center;
       font-size: 18px;
       margin-bottom: 20px;
     }
+    .main{
+      width: 1130px;
+      max-width: 95%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+  }
   
     .about-text p {
       font-size: 16px;
